--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -11,7 +11,8 @@
 }
 
 .nav-link {
-  color: black
+  color: black;
+  text-decoration: none;
 }
 
 .nav-link:hover {
@@ -21,3 +22,8 @@
 .active {
   color: #37b137 !important;
 }
+
+.bg-light-green {
+  background-color: #d6f5d6 !important; 
+}
+
