--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -1,13 +1,50 @@
-.my-custom-button {
-  color: white !important;
-  background-color: #37b137 !important;
-  border-color: #37b137 !important;
+:root {
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.my-custom-button:hover {
-  background-color: white !important;
-  border-color: #37b137 !important;
-  color: #37b137 !important;
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+}
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
 }
 
 .nav-link {
@@ -15,15 +52,22 @@
   text-decoration: none;
 }
 
-.nav-link:hover {
-  color: #f5a030 !important
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
 }
 
-.active {
-  color: #37b137 !important;
+footer {
+  width: 100%;
+  margin-top: auto;
+  background-color: #212529; 
+  color: white;
 }
-
-.bg-light-green {
-  background-color: #d6f5d6 !important; 
-}
-
