--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -66,3 +66,10 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+footer {
+  width: 100%;
+  margin-top: auto;
+  background-color: #212529; 
+  color: white;
+}
