--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -22,8 +22,9 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+html, body {
   margin: 0;
+  padding:0;
   display: flex;
   place-items: center;
   min-width: 320px;
@@ -67,9 +68,10 @@ button:focus-visible {
   }
 }
 
-footer {
+.custom-footer {
   width: 100%;
-  margin-top: auto;
-  background-color: #212529; 
+  background-color: rgb(185, 16, 207); /* TEST - change to #212529 later */
   color: white;
+  margin-top: auto;
 }
+
