--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -68,7 +68,7 @@ button {
 
 .custom-footer {
   width: 100%;
-  background-color: rgb(185, 16, 207); /* TEST - change to #212529 later */
+  background-color:#37b137;
   color: white;
   margin-top: auto;
 }
