--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -22,9 +22,21 @@ a:hover {
   color: #535bf2;
 }
 
-html, body {
+html,body, #root {
+  height: 100%;
   margin: 0;
-  padding:0;
+  display: flex;
+  flex-direction: column;
+}
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+body {
+  margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
