--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -37,7 +37,7 @@ html,body, #root {
 
 body {
   margin: 0;
-  display: flex;
+  display: flex;;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
