--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -21,3 +21,15 @@
 .active {
   color: #37b137 !important;
 }
+
+.about-underline {
+  background-image: linear-gradient(to right, #37b137 0 0);
+  /* Color of the underline */
+  background-position: bottom center;
+  /* Position of the underline */
+  background-size: 9% 2px;
+  /* Adjust length (80%) and thickness (2px) */
+  background-repeat: no-repeat;
+  padding-bottom: 4px;
+  /* Adjust vertical offset */
+}
