--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -11,11 +11,11 @@
 }
 
 .nav-link {
-  color: black
+  color: black;
 }
 
 .nav-link:hover {
-  color: #f5a030 !important
+  color: #f5a030 !important;
 }
 
 .active {
