--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -22,10 +22,11 @@ a:hover {
   color: #535bf2;
 }
 
-html,body, #root {
+html,
+body,
+#root {
   height: 100%;
   margin: 0;
-  
 }
 
 #root {
@@ -33,7 +34,6 @@ html,body, #root {
   flex-direction: column;
   min-height: 100vh;
 }
-
 
 .app-container {
   display: flex;
@@ -45,7 +45,6 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
-
 }
 
 h1 {
@@ -74,7 +73,6 @@ button {
   color: #f5a030 !important;
 }
 
-
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -89,13 +87,7 @@ button {
     outline-offset: 2px;
   }
 
-
   button {
     background-color: #f9f9f9;
   }
 }
-
-
-
-
-
