--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -65,12 +65,12 @@ button {
 }
 
 .nav-link {
-  color: black;
+  color: var(--color-link);
   text-decoration: none;
 }
 
 .nav-link:hover {
-  color: #f5a030 !important;
+  color: var(--color-link-hover);
 }
 
 @media (prefers-color-scheme: light) {
