--- a/client/src/css/NavPanel.css
+++ b/client/src/css/NavPanel.css
@@ -4,11 +4,11 @@
   font-size: 15px;
   letter-spacing: 0.5px;
   background-color: #ece5dd;
-  color : #F0A235
+  color: #f0a235;
 }
 .inactive-link {
   font-weight: normal;
   font-size: 15px;
   letter-spacing: 0.5px;
-  color : rgb(36, 137, 16);
+  color: rgb(36, 137, 16);
 }
