--- a/client/src/css/Footer.css
+++ b/client/src/css/Footer.css
@@ -32,7 +32,7 @@
 }
 
 .footer-logo {
-  max-width: 180px;
+  max-width: 200px;
 }
 
 .footer-nav-links {
@@ -75,3 +75,13 @@
   text-decoration: none;
   color: #37b137;
 }
+
+.nav-link {
+  color: var(--color-link);
+  text-decoration: none;
+}
+
+.nav-link:hover {
+  color: #f5a030;
+}
+
