--- a/client/src/css/Footer.css
+++ b/client/src/css/Footer.css
@@ -1,4 +1,4 @@
-.legal-link {
+.footer .legal-link {
   color: var(--link-legal, #37b137);
   text-decoration: underline;
   text-underline-offset: 2px;
@@ -10,7 +10,7 @@
   font-weight: 500;
 }
 
-.legal-link:focus-visible {
+.footer .legal-link:focus-visible{
   outline: 2px solid currentColor;
   outline-offset: 2px;
 }
@@ -71,16 +71,16 @@
   flex-wrap: wrap;
 }
 
-.legal-link {
+.footer .legal-link{
   text-decoration: none;
   color: #37b137;
 }
 
-.nav-link {
+.footer-nav-links .nav-link:hover {
   color: var(--color-link);
   text-decoration: none;
 }
 
-.nav-link:hover {
+.footer-nav-links .nav-link:focus-visible {
   color: #f5a030;
 }
