--- a/client/src/css/Footer.css
+++ b/client/src/css/Footer.css
@@ -1,20 +1,3 @@
-.footer .legal-link {
-  color: var(--link-legal, #37b137);
-  text-decoration: underline;
-  text-underline-offset: 2px;
-  text-decoration-thickness: 1px;
-  text-decoration-color: currentColor;
-  transition:
-    color 120ms ease-in-out,
-    text-decoration-color 120ms;
-  font-weight: 500;
-}
-
-.footer .legal-link:focus-visible {
-  outline: 2px solid currentColor;
-  outline-offset: 2px;
-}
-
 .footer {
   background-color: #ffffff;
   padding: 2rem 1rem;
@@ -42,6 +25,15 @@
   flex-wrap: wrap;
   flex-grow: 1;
   justify-content: center;
+}
+
+.footer-nav-links .nav-link:hover {
+  color: var(--color-link);
+  text-decoration: none;
+}
+
+.footer-nav-links .nav-link:focus-visible {
+  color: #f5a030;
 }
 
 .footer-social-icons {
@@ -72,15 +64,13 @@
 }
 
 .footer .legal-link {
-  text-decoration: none;
   color: #37b137;
-}
-
-.footer-nav-links .nav-link:hover {
-  color: var(--color-link);
+  font-weight: 500;
   text-decoration: none;
+  transition: color 120ms ease-in-out;
 }
 
-.footer-nav-links .nav-link:focus-visible {
-  color: #f5a030;
+.footer .legal-link:focus-visible {
+  outline: 2px solid currentColor;
+  outline-offset: 2px;
 }
