--- a/client/src/css/login.css
+++ b/client/src/css/login.css
@@ -1,8 +1,8 @@
 /*Wrapper */
 .login-wrapper {
   display: flex;
-  min-height: 100vh; 
-  background-color: #1E1E1E;
+  min-height: 100vh;
+  background-color: #1e1e1e;
 }
 
 /*  Left Pane  */
@@ -11,7 +11,7 @@
   width: 50%;
   display: flex;
   flex-direction: column;
-  justify-content: center; 
+  justify-content: center;
   align-items: center;
   padding: 2rem;
 }
@@ -39,7 +39,7 @@
 }
 
 .login-image-img {
-  width: 50%; 
+  width: 50%;
   height: auto;
   object-fit: contain;
   display: block;
@@ -52,7 +52,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh; 
+  min-height: 100vh;
   padding: 3rem;
 }
 
@@ -63,7 +63,7 @@
   background-color: #ffffff;
   color: #000000;
   border-radius: 16px;
-  padding: 4rem; 
+  padding: 4rem;
   box-shadow: 0 12px 36px rgba(0, 0, 0, 0.15);
   display: flex;
   justify-content: center;
@@ -72,7 +72,7 @@
 }
 
 .login-heading {
-  font-size: 1.9rem; 
+  font-size: 1.9rem;
   margin-bottom: 2rem;
   text-align: left;
 }
@@ -85,7 +85,7 @@
 .login-card input,
 .login-card textarea {
   width: 100%;
-  padding: 1rem 1.1rem; 
+  padding: 1rem 1.1rem;
   font-size: 1.5rem;
   margin-bottom: 1.5rem;
   border: 1px solid #dcdcdc;
@@ -105,7 +105,7 @@
 }
 
 .login-btn {
-  background-color: #37B137 !important;
+  background-color: #37b137 !important;
   color: #fff !important;
   padding: 1rem 1.5rem !important;
   font-size: 1.5em !important;
@@ -119,7 +119,7 @@
 .login-link {
   color: black;
   text-decoration: none;
-  font-size: 1.0rem;
+  font-size: 1rem;
   white-space: nowrap;
 }
 
@@ -136,7 +136,7 @@
   .login-image,
   .login-container {
     width: 100%;
-     flex: 0 0 auto;
+    flex: 0 0 auto;
   }
 
   .login-image-img {
