--- a/client/src/css/TopNavBar.css
+++ b/client/src/css/TopNavBar.css
@@ -86,3 +86,18 @@
     display: none;
   }
 }
+/*extras for navpanel*/
+.active-link {
+  font-weight: bold;
+  font-size: 15px;
+  letter-spacing: 0.5px;
+  background-color: #ece5dd;
+  color: #f0a235;
+}
+.inactive-link {
+  font-weight: normal;
+  font-size: 15px;
+  letter-spacing: 0.5px;
+  color: rgb(36, 137, 16);
+}
+
