added axios to relevant files

--- a/client/src/css/ForgotPassword.module.css
+++ b/client/src/css/ForgotPassword.module.css
@@ -167,3 +167,12 @@
     font-size: 0.9rem;
   }
 }
+
+
+
+/* Hide Empower illustration on small screens */
+@media (max-width: 600px) {
+  .leftSection img {
+    display: none;
+  }
+}
