--- a/client/src/css/navbar.css
+++ b/client/src/css/navbar.css
@@ -3,7 +3,9 @@
   background-color: #37b137 !important;
   border-color: #37b137 !important;
 }
-
+.my-custom-button.active {
+  color: white !important;
+}
 .my-custom-button:hover {
   background-color: white !important;
   border-color: #37b137 !important;
