--- a/client/src/css/Blog.module.css
+++ b/client/src/css/Blog.module.css
@@ -45,7 +45,7 @@
 }
 
 .sustainabilityUnderline {
-  background-image: linear-gradient(to right, #37b137 0 0);
+  background-image: linear-gradient(to right, #37b137 0%, #37b137 100%);
   background-position: bottom center;
   background-size: 25% 2px;
   background-repeat: no-repeat;
