--- a/client/src/css/signup.css
+++ b/client/src/css/signup.css
@@ -4,10 +4,10 @@
   transition: "all 0.3s ease";
   width: "100%";
   padding: "0.375rem 0.75rem";
-  font-Size: "1rem";
+  font-size: "1rem";
   line-height: "1.5";
   color: "#495057";
-  background-Color: "#fff";
+  background-color: "#fff";
 }
 
 .custom-phone-input-text {
