--- a/client/src/css/signup.css
+++ b/client/src/css/signup.css
@@ -1,13 +1,13 @@
 .custom-phone-input {
   border: 1px solid #ced4da;
   border-radius: 0.375rem;
-  transition: "all 0.3s ease";
-  width: "100%";
-  padding: "0.375rem 0.75rem";
-  font-size: "1rem";
-  line-height: "1.5";
-  color: "#495057";
-  background-color: "#fff";
+  transition: all 0.3s ease;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
 }
 
 .custom-phone-input-text {
