--- a/client/src/css/navbar.css
+++ b/client/src/css/navbar.css
@@ -3,9 +3,11 @@
   background-color: #37b137 !important;
   border-color: #37b137 !important;
 }
+
 .my-custom-button.active {
   color: white !important;
 }
+
 .my-custom-button:hover {
   background-color: white !important;
   border-color: #37b137 !important;
@@ -20,6 +22,6 @@
   color: #f5a030 !important;
 }
 
-.active {
+.nav-link.active {
   color: #37b137 !important;
 }
