--- a/client/src/css/ResourceCenter.css
+++ b/client/src/css/ResourceCenter.css
@@ -62,10 +62,10 @@
   display: flex;
   flex-direction: column;
 }
-.document-header{
+.document-header {
   color: blue;
   background-color: rgb(193, 193, 252);
 }
-.star{
-  color: #F5A030;
+.star {
+  color: #f5a030;
 }
