--- a/client/src/css/dashboard.css
+++ b/client/src/css/dashboard.css
@@ -1,10 +1,10 @@
-.eck-dashboard-icon{
-    color:#F5A030;
+.eck-dashboard-icon {
+  color: #f5a030;
 }
-.eck-dashboard-text{
-    font-size: 15px;
+.eck-dashboard-text {
+  font-size: 15px;
 }
-.eck-dashboard-text-heading{
-    font-size: 20px;
-    font-weight: bold;
+.eck-dashboard-text-heading {
+  font-size: 20px;
+  font-weight: bold;
 }
