add auth to serviceDetail

--- a/client/src/css/ServiceDetail.css
+++ b/client/src/css/ServiceDetail.css
@@ -208,8 +208,8 @@
 }
 
 .book-now-btn-fixed:hover {
-  background-color: #2a8a2a !important;
-  border-color: #2a8a2a !important;
+  background-color: #f5a030 !important;
+  border-color: #f5a030 !important;
   transform: translateY(-2px);
   box-shadow: 0 6px 20px rgba(55, 177, 55, 0.3);
 }
