--- a/client/src/css/signup.css
+++ b/client/src/css/signup.css
@@ -1,4 +1,4 @@
-.custom-phone-input {
+.custom-phone-input .PhoneInputCountry {
   border: 1px solid #ced4da;
   border-radius: 0.375rem;
   transition: all 0.3s ease;
@@ -15,7 +15,7 @@
   padding-left: 1 !important;
 }
 
-.custom-phone-input.rip-country-selector {
+.custom-phone-input .PhoneInputCountry {
   height: calc(2.25rem + 2px) !important;
   font-size: 1rem !important;
   padding-left: 1 !important;
@@ -25,6 +25,10 @@
   border-color: #28a745 !important;
   box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25) !important;
 }
+/*.custom-phone-input:focus-within {
+  border-color: #28a745 !important;
+  box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25) !important;
+}*/
 
 .form-check-input {
   accent-color: black !important;
